package practice.after;

public interface AttackStrategy {
    public void attack();
}
