package practice.after;

public class FlyingStrategy {
}
