package practice.after;

public interface MovingStrategy {
    public void move();
}
