package practice.after;

public class TaekwonV extends Robot{

    public TaekwonV(String name) {
        super(name);
    }

}
